Fixed misalignment of home post cards
It was caused by one post title having two lines while the other having
one line.

--- a/themes/wipdev/assets/css/main.css
+++ b/themes/wipdev/assets/css/main.css
@@ -197,6 +197,13 @@ blockquote * {
     width: 100%;
 }
 
+.home-post a {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
 .home-post h3 {
     margin: 15px 0;
     text-align: center;
